:recycle: refactor : rename a file

--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -6,7 +6,7 @@
 #    By: jecaudal <jecaudal@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/25 12:57:56 by jecaudal          #+#    #+#              #
-#    Updated: 2020/11/26 12:30:31 by jecaudal         ###   ########.fr        #
+#    Updated: 2020/11/26 12:53:15 by jecaudal         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,7 @@ LIB_SRCS	=	../lib/print.c			\
 LIB_OBJS	=	$(LIB_SRCS:.c=.o)
 
 SRCS		=	./main.c			\
-				./utils.c			\
+				./lst_new.c			\
 				./philo_gen.c		\
 				./philo_life.c		\
 				./philo_debug.c		\
